8376290: SocketChannel.finishConnect() contains confusing "getsockopt" in exception message for a failed connect() on Windows

Reviewed-by: alanb